Added divs in result.html

--- a/quiz/result.html
+++ b/quiz/result.html
@@ -9,5 +9,8 @@
 <body>
     <p>Congratiolations!</p>
     <p>Your score is: 0</p>
+    <div class="bomba">Bomba</div>
+    <div class="bomba">Radiyo</div>
+    <div class="bomba">Balita</div>
 </body>
 </html>
